--- a/snippets/custom-general.liquid
+++ b/snippets/custom-general.liquid
@@ -2,4 +2,20 @@
   .header__heading-logo-wrapper img{
     filter: brightness(0);
   }
+  .shopify-section .multicolumn {
+    position: relative!important;
+  }
+  .banner-image{
+    max-height: 500px!important;
+  }
+  .multicolumn-list.grid {
+    flex-wrap: nowrap;
+  }
+  .slider-mobile-gutter {
+    width: 100%;
+    overflow: scroll;
+  }
+  .slider-mobile-gutter::-webkit-scrollbar {
+    display: none;
+  }
 </style>
